switched to Java 8 in Token, updated gitignore