@@ -15,7 +15,10 @@
 
  package proj9AbulhabFengMaoSavillo.bantam.lexer;
 
- import java.util.Set;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.Set;
 
  public class Token
  {
@@ -76,8 +79,8 @@
          RETURN, WHILE
      }
 
-     private static Set<String> reservedWords = Set.of("break", "cast", "class", "var",
-             "else", "extends", "for", "if", "instanceof", "new", "return", "while");
+     private static Set<String> reservedWords = Collections.unmodifiableSet(
+    		               new HashSet<>( Arrays.asList("break", "cast", "class", "var", "else", "extends", "for", "if", "instanceof", "new", "return", "while") ));
 
  }
 
